--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="row align-items-center">
                 <!-- Image Column -->
                 <div class="col-md-6 mb-4 mb-md-0 text-center" data-aos="fade-right">
-                    <img style="width: 500px;height: 500px;" src="about.png" 
+                    <img style="width: 500px;height: 500px;" src="about.jpg" 
                          alt="About Image" 
                          class="img-fluid about-img" />
                 </div>
